@@ -330,7 +330,7 @@ public class ExpectedTypeFinder extends NodeTransformer<Optional<TypeSymbol>> {
             return Optional.empty();
         }
 
-        return (bLangInvocation.symbol instanceof BInvokableSymbol && bLangInvocation.getRequiredArgs().size() > 0) ?
+        return (bLangInvocation.symbol instanceof BInvokableSymbol && !bLangInvocation.getRequiredArgs().isEmpty()) ?
                 transformFunctionOrMethod(bLangNode,
                         ((BLangNode) bLangInvocation.getRequiredArgs().get(0)).getBType(),
                         (BInvokableSymbol) bLangInvocation.symbol, node.arguments(),
@@ -444,10 +444,12 @@ public class ExpectedTypeFinder extends NodeTransformer<Optional<TypeSymbol>> {
         return ((FunctionSymbol) functionSymbol.get()).typeDescriptor().returnTypeDescriptor();
     }
 
+    @Override
     public Optional<TypeSymbol> transform(MatchClauseNode node) {
         return node.parent().apply(this);
     }
 
+    @Override
     public Optional<TypeSymbol> transform(MatchStatementNode node) {
         return this.semanticModel.typeOf(node.condition());
     }
@@ -475,7 +477,7 @@ public class ExpectedTypeFinder extends NodeTransformer<Optional<TypeSymbol>> {
                 instanceof BInvokableSymbol)) {
             List<BVarSymbol> params = ((BInvokableSymbol) (((BLangInvocation) ((BLangTypeInit) bLangNode).
                     initInvocation).symbol)).params;
-            if (params.size() == 0) {
+            if (params.isEmpty()) {
                 throw new IllegalStateException();
             }
 
@@ -620,7 +622,7 @@ public class ExpectedTypeFinder extends NodeTransformer<Optional<TypeSymbol>> {
             Token openParen = node.openParenToken();
             Token closeParen = node.closeParenToken();
             if (isWithinParenthesis(openParen, closeParen)) {
-                if (bLangActionInvocation.argExprs.size() == 0) {
+                if (bLangActionInvocation.argExprs.isEmpty()) {
                     return getTypeFromBType(((BInvokableSymbol) bLangActionInvocation.symbol).
                             getParameters().get(0).getType());
                 }
@@ -885,7 +887,7 @@ public class ExpectedTypeFinder extends NodeTransformer<Optional<TypeSymbol>> {
             //`params` contains path params and path rest params as well. We need to skip those
             List<BVarSymbol> params = symbol.params.stream().filter(param ->
                     param.getKind() != SymbolKind.PATH_PARAMETER
-                            && param.getKind() != SymbolKind.PATH_REST_PARAMETER).collect(Collectors.toList());
+                            && param.getKind() != SymbolKind.PATH_REST_PARAMETER).toList();
             BVarSymbol restPram = ((BInvokableSymbol) bLangInvocation.symbol).restParam;
             TypeSymbol restParamMemberType = null;
 
@@ -1235,7 +1237,7 @@ public class ExpectedTypeFinder extends NodeTransformer<Optional<TypeSymbol>> {
                                                            SeparatedNodeList<FunctionArgumentNode> arguments,
                                                            Token openParenToken, Token closeParenToken,
                                                            boolean hasFirstArg) {
-        if (originalInvokable == null || originalInvokable.params.size() == 0) {
+        if (originalInvokable == null || originalInvokable.params.isEmpty()) {
             return getExpectedTypeFromFunction(bLangNode, openParenToken, closeParenToken);
         }
 
