@@ -625,6 +625,7 @@ public class ReachabilityAnalyzer extends SimpleBLangNodeAnalyzer<ReachabilityAn
     public void visit(BLangExternalFunctionBody body, AnalyzerData data) {
     }
 
+    @Override
     public void visit(BLangResourceFunction resourceFunction, AnalyzerData data) {
         visit((BLangFunction) resourceFunction, data);
     }
@@ -974,7 +975,7 @@ public class ReachabilityAnalyzer extends SimpleBLangNodeAnalyzer<ReachabilityAn
         if (varRef.cause != null) {
             varRefs.add(varRef.cause);
         }
-        varRefs.addAll(varRef.detail.stream().map(e -> e.expr).collect(Collectors.toList()));
+        varRefs.addAll(varRef.detail.stream().map(e -> e.expr).toList());
         varRefs.add(varRef.restVar);
         return varRefs;
     }
