@@ -112,7 +112,7 @@ public class ClientResourceAccessActionNodeContext
             } else {
                 List<Node> arguments = new ArrayList<>();
                 node.arguments().ifPresent(argList ->
-                        arguments.addAll(argList.arguments().stream().collect(Collectors.toList())));
+                        arguments.addAll(argList.arguments().stream().toList()));
                 if (isNotInNamedArgOnlyContext(context, arguments)) {
                     completionItems.addAll(this.actionKWCompletions(context));
                     completionItems.addAll(this.expressionCompletions(context));
@@ -215,23 +215,36 @@ public class ClientResourceAccessActionNodeContext
         Optional<TypeSymbol> parameterSymbol = getParameterTypeSymbol(context);
         for (int i = 0; i < completionItems.size(); i++) {
             LSCompletionItem completionItem = completionItems.get(i);
-            if (completionItem.getType() == LSCompletionItem.CompletionItemType.NAMED_ARG) {
+            LSCompletionItem.CompletionItemType type = completionItem.getType();
+            if (type == LSCompletionItem.CompletionItemType.NAMED_ARG) {
                 sortNamedArgCompletionItem(context, completionItem);
             } else if (parameterSymbol.isEmpty()) {
-                sortParameterlessCompletionItem(context, completionItem);
-            } else if (completionItem.getType() == LSCompletionItem.CompletionItemType.SYMBOL) {
-                SymbolCompletionItem symbolCompletionItem = (SymbolCompletionItem) completionItem;
-                if (symbolCompletionItem.getSymbol().isPresent() &&
-                        symbolCompletionItem.getSymbol().get().kind() == SymbolKind.RESOURCE_METHOD) {
-                    completionItem.getCompletionItem().setSortText(
-                            SortingUtil.genSortTextByAssignability(context, completionItem, parameterSymbol.get()) +
-                                    SortingUtil.genSortText(i + 1));
-                }
-                sortDefaultCompletionItem(context, parameterSymbol.get(), completionItem);
+                sortParameterlessCompletionItem(context, i, completionItem);
+            } else if (type == LSCompletionItem.CompletionItemType.SYMBOL) {
+                sortSymbolCompletionItem(context, parameterSymbol.get(), i, completionItem);
             } else {
                 sortDefaultCompletionItem(context, parameterSymbol.get(), completionItem);
             }
         }
+    }
+
+    private static void sortParameterlessCompletionItem(BallerinaCompletionContext context, int rank,
+                                                          LSCompletionItem completionItem) {
+        completionItem.getCompletionItem().setSortText(SortingUtil.genSortText(
+                SortingUtil.toRank(context, completionItem)) + SortingUtil.genSortText(rank + 1));
+    }
+
+    private static void sortSymbolCompletionItem(BallerinaCompletionContext context, TypeSymbol parameterSymbol,
+                                                   int rank, LSCompletionItem completionItem) {
+        SymbolCompletionItem symbolCompletionItem = (SymbolCompletionItem) completionItem;
+        Optional<Symbol> symbol = symbolCompletionItem.getSymbol();
+        if (symbol.isPresent() && symbol.get().kind() == SymbolKind.RESOURCE_METHOD) {
+            completionItem.getCompletionItem().setSortText(
+                    SortingUtil.genSortTextByAssignability(context, completionItem, parameterSymbol) +
+                            SortingUtil.genSortText(rank + 1));
+            return;
+        }
+        sortDefaultCompletionItem(context, parameterSymbol, completionItem);
     }
 
     private List<LSCompletionItem> getPathSegmentCompletionItems(ClientResourceAccessActionNode node,
@@ -410,7 +423,7 @@ public class ClientResourceAccessActionNodeContext
             return false;
         }
         return (functionTypeSymbol.params().isEmpty()
-                || functionTypeSymbol.params().get().size() == 0)
+                || functionTypeSymbol.params().get().isEmpty())
                 && functionTypeSymbol.restParam().isEmpty();
     }
 }
