@@ -47,10 +47,10 @@ import io.ballerina.compiler.syntax.tree.TypeDescriptorNode;
 import io.ballerina.jsonmapper.diagnostic.DiagnosticMessage;
 import io.ballerina.jsonmapper.diagnostic.DiagnosticUtils;
 import org.apache.commons.lang3.StringUtils;
-import org.ballerinalang.formatter.core.ForceFormattingOptions;
 import org.ballerinalang.formatter.core.Formatter;
 import org.ballerinalang.formatter.core.FormatterException;
-import org.ballerinalang.formatter.core.FormattingOptions;
+import org.ballerinalang.formatter.core.options.ForceFormattingOptions;
+import org.ballerinalang.formatter.core.options.FormattingOptions;
 import org.ballerinalang.langserver.commons.workspace.WorkspaceManager;
 import org.javatuples.Pair;
 
@@ -93,7 +93,8 @@ public class JsonToRecordMapper {
      * @deprecated
      * This method returns the Ballerina code for the provided JSON value or the diagnostics.
      *
-     * <p> Use {@link JsonToRecordMapper#convert(String, String, boolean, boolean, boolean, String, WorkspaceManager)}}
+     * <p> Use {@link
+     * JsonToRecordMapper#convert(String, String, boolean, boolean, boolean, String, WorkspaceManager, boolean)}}
      * instead.
      *
      * @param jsonString JSON string of the JSON value to be converted to Ballerina record
@@ -104,8 +105,10 @@ public class JsonToRecordMapper {
      */
     @Deprecated
     public static JsonToRecordResponse convert(String jsonString, String recordName, boolean isRecordTypeDesc,
-                                               boolean isClosed) {
-        return convert(jsonString, recordName, isRecordTypeDesc, isClosed, false, null, null);
+                                               boolean isClosed, boolean forceFormatRecordFields, String filePathUri,
+                                               WorkspaceManager workspaceManager) {
+        return convert(jsonString, recordName, isRecordTypeDesc, isClosed, forceFormatRecordFields, filePathUri,
+                workspaceManager, false);
     }
 
     /**
@@ -118,11 +121,12 @@ public class JsonToRecordMapper {
      * @param forceFormatRecordFields To denote whether the inline records to be formatted for multi-line or in-line
      * @param filePathUri FilePath URI of the/a file in a singleFileProject or module
      * @param workspaceManager Workspace manager instance
+     * @param isNullAsOptional To denote whether the null values in the JSON should be considered as optional fields
      * @return {@link JsonToRecordResponse} Ballerina code block or the Diagnostics
      */
     public static JsonToRecordResponse convert(String jsonString, String recordName, boolean isRecordTypeDesc,
                                                boolean isClosed, boolean forceFormatRecordFields, String filePathUri,
-                                               WorkspaceManager workspaceManager) {
+                                               WorkspaceManager workspaceManager, boolean isNullAsOptional) {
         List<String> existingFieldNames = getExistingTypeNames(workspaceManager, filePathUri);
         Map<String, String> updatedFieldNames = new HashMap<>();
         Map<String, NonTerminalNode> recordToTypeDescNodes = new LinkedHashMap<>();
@@ -139,13 +143,14 @@ public class JsonToRecordMapper {
             JsonElement parsedJson = JsonParser.parseString(jsonString);
             if (parsedJson.isJsonObject()) {
                 generateRecords(parsedJson.getAsJsonObject(), null, isClosed, recordToTypeDescNodes, null,
-                        jsonFieldToElements, existingFieldNames, updatedFieldNames, diagnosticMessages);
+                        jsonFieldToElements, existingFieldNames, updatedFieldNames,
+                        diagnosticMessages, isNullAsOptional);
             } else if (parsedJson.isJsonArray()) {
                 JsonObject object = new JsonObject();
-                object.add(((recordName == null) || recordName.equals("")) ? StringUtils.uncapitalize(NEW_RECORD_NAME) :
+                object.add(((recordName == null) || recordName.isEmpty()) ? StringUtils.uncapitalize(NEW_RECORD_NAME) :
                         StringUtils.uncapitalize(recordName), parsedJson);
                 generateRecords(object, null, isClosed, recordToTypeDescNodes, null, jsonFieldToElements,
-                        existingFieldNames, updatedFieldNames, diagnosticMessages);
+                        existingFieldNames, updatedFieldNames, diagnosticMessages, isNullAsOptional);
             } else {
                 DiagnosticMessage message = DiagnosticMessage.jsonToRecordConverter101(null);
                 diagnosticMessages.add(message);
@@ -167,7 +172,7 @@ public class JsonToRecordMapper {
                 .map(entry -> {
                     Token typeKeyWord = AbstractNodeFactory.createToken(SyntaxKind.TYPE_KEYWORD);
                     String recordTypeName = entry.getKey() == null ?
-                            (recordName == null || recordName.equals("")) ?
+                            (recordName == null || recordName.isEmpty()) ?
                                     getAndUpdateFieldNames(NEW_RECORD_NAME, false,
                                             existingFieldNames, updatedFieldNames)
                                     : escapeIdentifier(StringUtils.capitalize(recordName)) : entry.getKey();
@@ -222,13 +227,15 @@ public class JsonToRecordMapper {
      * @param existingFieldNames The list of already existing record names in the ModulePartNode
      * @param updatedFieldNames The map of updated record names for already existing record names in the ModulePartNode
      * @param diagnosticMessages The list of diagnostic messages generated by the method
+     * @param isNullAsOptional To denote whether the null values in the JSON should be considered as optional fields
      */
     private static void generateRecords(JsonObject jsonObject, String recordName, boolean isClosed,
                                         Map<String, NonTerminalNode> recordToTypeDescNodes, String moveBefore,
                                         Map<String, JsonElement> jsonNodes,
                                         List<String> existingFieldNames,
                                         Map<String, String> updatedFieldNames,
-                                        List<DiagnosticMessage> diagnosticMessages) {
+                                        List<DiagnosticMessage> diagnosticMessages,
+                                        boolean isNullAsOptional) {
         Token recordKeyWord = AbstractNodeFactory.createToken(SyntaxKind.RECORD_KEYWORD);
         Token bodyStartDelimiter = AbstractNodeFactory.createToken(isClosed ? SyntaxKind.OPEN_BRACE_PIPE_TOKEN :
                 SyntaxKind.OPEN_BRACE_TOKEN);
@@ -238,17 +245,19 @@ public class JsonToRecordMapper {
             for (Map.Entry<String, JsonElement> entry : jsonObject.entrySet()) {
                 if (entry.getValue().isJsonObject() || entry.getValue().isJsonArray()) {
                     generateRecordForObjAndArray(entry.getValue(), entry.getKey(), isClosed, recordToTypeDescNodes,
-                            recordName, jsonNodes, existingFieldNames, updatedFieldNames, diagnosticMessages, false);
+                            recordName, jsonNodes, existingFieldNames, updatedFieldNames, diagnosticMessages, false,
+                            isNullAsOptional);
                 }
                 jsonNodes.put(entry.getKey(), entry.getValue());
             }
             prepareAndUpdateRecordFields(jsonObject, recordName, jsonNodes, recordToTypeDescNodes,
-                    diagnosticMessages, recordFields, existingFieldNames, updatedFieldNames, false);
+                    diagnosticMessages, recordFields, existingFieldNames, updatedFieldNames, false, isNullAsOptional);
         } else {
             for (Map.Entry<String, JsonElement> entry : jsonObject.entrySet()) {
                 if (entry.getValue().isJsonObject() || entry.getValue().isJsonArray()) {
                     generateRecordForObjAndArray(entry.getValue(), entry.getKey(), isClosed, recordToTypeDescNodes,
-                            null, jsonNodes, existingFieldNames, updatedFieldNames, diagnosticMessages, false);
+                            null, jsonNodes, existingFieldNames, updatedFieldNames, diagnosticMessages, false,
+                            isNullAsOptional);
                 }
                 jsonNodes.put(entry.getKey(), entry.getValue());
                 Node recordField = getRecordField(entry, existingFieldNames, updatedFieldNames, false);
@@ -257,7 +266,8 @@ public class JsonToRecordMapper {
             if (recordToTypeDescNodes.containsKey(recordName)) {
                 recordFields.clear();
                 prepareAndUpdateRecordFields(jsonObject, recordName, jsonNodes, recordToTypeDescNodes,
-                        diagnosticMessages, recordFields, existingFieldNames, updatedFieldNames, true);
+                        diagnosticMessages, recordFields, existingFieldNames, updatedFieldNames, true,
+                        isNullAsOptional);
             }
         }
         NodeList<Node> fieldNodes = AbstractNodeFactory.createNodeList(recordFields);
@@ -271,7 +281,7 @@ public class JsonToRecordMapper {
             recordToTypeDescNodes.put(recordName, recordTypeDescriptorNode);
         } else {
             List<Map.Entry<String, NonTerminalNode>> typeDescNodes = new ArrayList<>(recordToTypeDescNodes.entrySet());
-            List<String> recordNames = typeDescNodes.stream().map(Map.Entry::getKey).collect(Collectors.toList());
+            List<String> recordNames = typeDescNodes.stream().map(Map.Entry::getKey).toList();
             Map.Entry<String, NonTerminalNode> mapEntry =
                     new AbstractMap.SimpleEntry<>(recordName, recordTypeDescriptorNode);
             typeDescNodes.add(recordNames.indexOf(moveBefore), mapEntry);
@@ -286,17 +296,18 @@ public class JsonToRecordMapper {
                                                      List<String> existingFieldNames,
                                                      Map<String, String> updatedFieldNames,
                                                      List<DiagnosticMessage> diagnosticMessages,
-                                                     boolean arraySuffixAdded) {
+                                                     boolean arraySuffixAdded,
+                                                     boolean isNullAsOptional) {
         if (jsonElement.isJsonObject()) {
             String type = escapeIdentifier(StringUtils.capitalize(elementKey));
             String updatedType = getAndUpdateFieldNames(type, arraySuffixAdded, existingFieldNames, updatedFieldNames);
             generateRecords(jsonElement.getAsJsonObject(), updatedType, isClosed, recordToTypeDescNodes,
-                    moveBefore, jsonNodes, existingFieldNames, updatedFieldNames, diagnosticMessages);
+                    moveBefore, jsonNodes, existingFieldNames, updatedFieldNames, diagnosticMessages, isNullAsOptional);
         } else if (jsonElement.isJsonArray()) {
             for (JsonElement element : jsonElement.getAsJsonArray()) {
                 String arrayElementKey = elementKey + (arraySuffixAdded ? "" : ARRAY_RECORD_SUFFIX);
                 generateRecordForObjAndArray(element, arrayElementKey, isClosed, recordToTypeDescNodes, moveBefore,
-                        jsonNodes, existingFieldNames, updatedFieldNames, diagnosticMessages, true);
+                        jsonNodes, existingFieldNames, updatedFieldNames, diagnosticMessages, true, isNullAsOptional);
             }
         }
     }
@@ -314,6 +325,7 @@ public class JsonToRecordMapper {
      * @param updatedFieldNames The map of updated record names for already existing record names in the ModulePartNode
      * @param prepareForNestedSameField To denote if the fields are being prepared for normal processing or
      *                                  for nested JSON with same field
+     * @param isNullAsOptional To denote whether the null values in the JSON should be considered as optional fields
      */
     private static void prepareAndUpdateRecordFields(JsonObject jsonObject, String recordName,
                                                     Map<String, JsonElement> jsonNodes,
@@ -321,26 +333,26 @@ public class JsonToRecordMapper {
                                                     List<DiagnosticMessage> diagnosticMessages,
                                                     List<Node> recordFields, List<String> existingFieldNames,
                                                     Map<String, String> updatedFieldNames,
-                                                    boolean prepareForNestedSameField) {
+                                                    boolean prepareForNestedSameField, boolean isNullAsOptional) {
         RecordTypeDescriptorNode previousRecordTypeDescriptorNode =
                 (RecordTypeDescriptorNode) recordToTypeDescNodes.get(recordName);
         List<RecordFieldNode> previousRecordFields = previousRecordTypeDescriptorNode.fields().stream()
-                .map(node -> (RecordFieldNode) node).collect(Collectors.toList());
+                .map(node -> (RecordFieldNode) node).toList();
         Map<String, RecordFieldNode> previousRecordFieldToNodes = previousRecordFields.stream()
                 .collect(Collectors.toMap(node -> node.fieldName().text(), Function.identity(),
                         (val1, val2) -> val1, LinkedHashMap::new));
         Map<String, RecordFieldNode> newRecordFieldToNodes = jsonObject.entrySet().stream()
                 .map(entry ->
                         (RecordFieldNode) getRecordField(entry, existingFieldNames, updatedFieldNames, false))
-                .collect(Collectors.toList()).stream()
+                .toList().stream()
                 .collect(Collectors.toMap(node -> node.fieldName().text(), Function.identity(),
                         (val1, val2) -> val1, LinkedHashMap::new));
         if (prepareForNestedSameField) {
             updateRecordFields(jsonObject, jsonNodes, diagnosticMessages, recordFields, existingFieldNames,
-                    updatedFieldNames, newRecordFieldToNodes, previousRecordFieldToNodes);
+                    updatedFieldNames, newRecordFieldToNodes, previousRecordFieldToNodes, isNullAsOptional);
         } else {
             updateRecordFields(jsonObject, jsonNodes, diagnosticMessages, recordFields, existingFieldNames,
-                    updatedFieldNames, previousRecordFieldToNodes, newRecordFieldToNodes);
+                    updatedFieldNames, previousRecordFieldToNodes, newRecordFieldToNodes, isNullAsOptional);
         }
     }
 
@@ -355,13 +367,15 @@ public class JsonToRecordMapper {
      * @param updatedFieldNames The map of updated record names for already existing record names in the ModulePartNode
      * @param previousRecordFieldToNodes The list of already generated field nodes
      * @param newRecordFieldToNodes The list of newly generated field nodes for the same record
+     * @param isNullAsOptional To denote whether the null values in the JSON should be considered as optional fields
      */
     private static void updateRecordFields(JsonObject jsonObject, Map<String, JsonElement> jsonNodes,
                                            List<DiagnosticMessage> diagnosticMessages, List<Node> recordFields,
                                            List<String> existingFieldNames,
                                            Map<String, String> updatedFieldNames,
                                            Map<String, RecordFieldNode> previousRecordFieldToNodes,
-                                           Map<String, RecordFieldNode> newRecordFieldToNodes) {
+                                           Map<String, RecordFieldNode> newRecordFieldToNodes,
+                                           boolean isNullAsOptional) {
         Map<String, Pair<RecordFieldNode, RecordFieldNode>> intersectingRecordFields =
                 intersection(previousRecordFieldToNodes, newRecordFieldToNodes);
         Map<String, RecordFieldNode> differencingRecordFields =
@@ -379,6 +393,7 @@ public class JsonToRecordMapper {
                 TypeDescriptorNode node2 = (TypeDescriptorNode) entry.getValue().getValue1().typeName();
 
                 TypeDescriptorNode nonAnyDataNode = null;
+                IdentifierToken optionalFieldName = null;
                 boolean alreadyOptionalTypeDesc = false;
 
                 if (node1.kind().equals(SyntaxKind.OPTIONAL_TYPE_DESC)) {
@@ -389,14 +404,17 @@ public class JsonToRecordMapper {
                     OptionalTypeDescriptorNode optionalTypeDescNode = (OptionalTypeDescriptorNode) node2;
                     node2 = (TypeDescriptorNode) optionalTypeDescNode.typeDescriptor();
                     alreadyOptionalTypeDesc = true;
-                } else {
-                    Token questionMarkToken = AbstractNodeFactory.createToken(SyntaxKind.QUESTION_MARK_TOKEN);
-                    if (node1.kind().equals(SyntaxKind.ANYDATA_KEYWORD)) {
-                        nonAnyDataNode =
-                                NodeParser.parseTypeDescriptor(node2.toSourceCode() + questionMarkToken.text());
-                    } else if (node2.kind().equals(SyntaxKind.ANYDATA_KEYWORD)) {
-                        nonAnyDataNode =
-                                NodeParser.parseTypeDescriptor(node1.toSourceCode() + questionMarkToken.text());
+                } else if ((node1.kind().equals(SyntaxKind.ANYDATA_KEYWORD) ||
+                            node2.kind().equals(SyntaxKind.ANYDATA_KEYWORD))) {
+                    if (isNullAsOptional) {
+                        nonAnyDataNode = NodeParser.parseTypeDescriptor(node1.kind().equals(SyntaxKind.ANYDATA_KEYWORD)
+                                ? node2.toSourceCode() : node1.toSourceCode());
+                        optionalFieldName = AbstractNodeFactory.createIdentifierToken(entry.getKey() +
+                                SyntaxKind.QUESTION_MARK_TOKEN.stringValue());
+                    } else {
+                        nonAnyDataNode = NodeParser.parseTypeDescriptor(node1.kind().equals(SyntaxKind.ANYDATA_KEYWORD)
+                                ? node2.toSourceCode() + SyntaxKind.QUESTION_MARK_TOKEN.stringValue() :
+                        node1.toSourceCode() + SyntaxKind.QUESTION_MARK_TOKEN.stringValue());
                     }
                 }
 
@@ -408,7 +426,9 @@ public class JsonToRecordMapper {
                 RecordFieldNode recordField =
                         (RecordFieldNode) getRecordField(jsonEntry, existingFieldNames, updatedFieldNames, isOptional);
                 recordField = recordField.modify()
-                        .withTypeName(nonAnyDataNode == null ? unionTypeDescNode : nonAnyDataNode).apply();
+                        .withTypeName(nonAnyDataNode == null ? unionTypeDescNode : nonAnyDataNode)
+                        .withFieldName(optionalFieldName == null ? recordField.fieldName() : optionalFieldName)
+                        .apply();
                 recordFields.add(recordField);
             } else {
                 Node recordField = getRecordField(jsonEntry, existingFieldNames, updatedFieldNames, isOptional);
@@ -501,7 +521,7 @@ public class JsonToRecordMapper {
         for (TypeDefinitionNode typeDefNode : typeDefNodes) {
             RecordTypeDescriptorNode recordTypeDescNode = (RecordTypeDescriptorNode) typeDefNode.typeDescriptor();
             List<RecordFieldNode> recordFieldNodes = recordTypeDescNode.fields().stream()
-                    .map(node -> (RecordFieldNode) node).collect(Collectors.toList());
+                    .map(node -> (RecordFieldNode) node).toList();
             List<Node> intermediateRecordFieldNodes = new ArrayList<>();
             for (RecordFieldNode recordFieldNode : recordFieldNodes) {
                 TypeDescriptorNode fieldTypeName = (TypeDescriptorNode) recordFieldNode.typeName();
@@ -560,7 +580,7 @@ public class JsonToRecordMapper {
                 TypeDescriptorNode tempTypeNode =
                         NodeFactory.createBuiltinSimpleNameReferenceNode(tempTypeName.kind(), tempTypeName);
                 if (!typeDescriptorNodes.stream().map(Node::toSourceCode)
-                        .collect(Collectors.toList()).contains(tempTypeNode.toSourceCode())) {
+                        .toList().contains(tempTypeNode.toSourceCode())) {
                     typeDescriptorNodes.add(tempTypeNode);
                 }
             } else if (element.isJsonNull()) {
@@ -568,7 +588,7 @@ public class JsonToRecordMapper {
                 TypeDescriptorNode tempTypeNode =
                         NodeFactory.createBuiltinSimpleNameReferenceNode(tempTypeName.kind(), tempTypeName);
                 if (!typeDescriptorNodes.stream().map(Node::toSourceCode)
-                        .collect(Collectors.toList()).contains(tempTypeNode.toSourceCode())) {
+                        .toList().contains(tempTypeNode.toSourceCode())) {
                     typeDescriptorNodes.add(tempTypeNode);
                 }
             } else if (element.isJsonObject()) {
@@ -580,7 +600,7 @@ public class JsonToRecordMapper {
                 TypeDescriptorNode tempTypeNode =
                         NodeFactory.createBuiltinSimpleNameReferenceNode(tempTypeName.kind(), tempTypeName);
                 if (!typeDescriptorNodes.stream().map(Node::toSourceCode)
-                        .collect(Collectors.toList()).contains(tempTypeNode.toSourceCode())) {
+                        .toList().contains(tempTypeNode.toSourceCode())) {
                     typeDescriptorNodes.add(tempTypeNode);
                 }
             } else if (element.isJsonArray()) {
@@ -589,7 +609,7 @@ public class JsonToRecordMapper {
                 TypeDescriptorNode tempTypeNode =
                         getArrayTypeDescriptorNode(arrayEntry, existingFieldNames, updatedFieldNames);
                 if (!typeDescriptorNodes.stream().map(Node::toSourceCode)
-                        .collect(Collectors.toList()).contains(tempTypeNode.toSourceCode())) {
+                        .toList().contains(tempTypeNode.toSourceCode())) {
                     typeDescriptorNodes.add(tempTypeNode);
                 }
             }
@@ -613,7 +633,7 @@ public class JsonToRecordMapper {
      */
     private static TypeDescriptorNode createUnionTypeDescriptorNode(List<TypeDescriptorNode> typeNames,
                                                                     boolean isOptional) {
-        if (typeNames.size() == 0) {
+        if (typeNames.isEmpty()) {
             Token typeName = AbstractNodeFactory.createToken(SyntaxKind.ANYDATA_KEYWORD);
             return NodeFactory.createBuiltinSimpleNameReferenceNode(typeName.kind(), typeName);
         } else if (typeNames.size() == 1) {
