@@ -20,6 +20,7 @@ package org.ballerinalang.test.util;
 import org.ballerinalang.test.exceptions.BLangTestException;
 
 import java.io.BufferedReader;
+import java.io.File;
 import java.io.FileInputStream;
 import java.io.IOException;
 import java.io.InputStream;
@@ -33,7 +34,7 @@ import java.nio.file.SimpleFileVisitor;
 import java.nio.file.StandardCopyOption;
 import java.nio.file.attribute.BasicFileAttributes;
 import java.util.List;
-import java.util.stream.Collectors;
+import java.util.Objects;
 
 /**
  * Utility methods for doing file operations.
@@ -131,7 +132,7 @@ public class BFileUtil {
             return;
         }
         List<Path> files = Files.find(path, Integer.MAX_VALUE, (p, attribute) ->
-                p.toString().contains(pattern)).collect(Collectors.toList());
+                p.toString().contains(pattern)).toList();
         for (Path file : files) {
             BFileUtil.delete(file);
         }
@@ -172,4 +173,21 @@ public class BFileUtil {
         return sb.toString();
     }
 
+    /**
+     * Delete a directory and all its contents.
+     *
+     * @param directory Directory to be deleted
+     * @return whether the directory is deleted
+     */
+    public static boolean deleteDirectory(File directory) {
+        if (directory.isDirectory()) {
+            for (File f : Objects.requireNonNull(directory.listFiles())) {
+                boolean success = deleteDirectory(f);
+                if (!success) {
+                    return false;
+                }
+            }
+        }
+        return directory.delete();
+    }
 }
